--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "bluebird": "^3.3.5",
     "boom": "^3.1.3",
     "lodash": "^4.12.0",
-    "node-uuid": "^1.4.7",
     "redis": "^2.6.0-2",
     "require-directory": "^2.1.1",
-    "type-of": "^2.0.1"
+    "type-of": "^2.0.1",
+    "uuid": "^3.0.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
